fixed spacing on portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -316,6 +316,10 @@ input[type=submit] {
     margin-left: 10px;
   }   
 
+#row-3 {
+  margin-bottom: 75px;
+}
+
   .link {
     text-align: center;
     color: #4aaaa5;
@@ -370,6 +374,7 @@ input[type=submit] {
     margin-right: 20px auto;
     margin-left: 10px auto;
   }   
+
 
 .link {
   text-align: center
